--- a/cell01/ex04/basic.html
+++ b/cell01/ex04/basic.html
@@ -8,12 +8,16 @@
 		width: 50%;
 		text-align: center;
 	}
+	h1{
+		text-align: center;
+		color: white;
+	}
   
 </style>
 </head>
 <body style="background-color:pink;">
 	<title>Basics</title>
-	<center><h1 style="color:white;">-so <i>b</i>igger-</h1></center>
+	<h1>-so <i>b</i>igger-</h1>
 	  	<div class="side_float">
 	    	<img width="700" src="https://upload.wikimedia.org/wikipedia/commons/b/b5/Shopee-logo.jpg">
 			<h4><a href="https://shopee.co.th/buyer/login?fu_tracking_id=89504bfcb36-95b6-4df1-aaab-f29965e285b5&next=https%3A%2F%2Fshopee.co.th%2F%3Fgad_source%3D1%26gad_campaignid%3D19798166808%26gbraid%3D0AAAAADPpYO2H0-jErPPRzzqA1O8y6YRia%26gclid%3DEAIaIQobChMIq6fb6_D8jAMVSLpLBR1PjCmFEAAYASAAEgLjGfD_BwE">Shopee</a></h4>
