--- a/cell01/ex05/tab.html
+++ b/cell01/ex05/tab.html
@@ -7,13 +7,13 @@
             border: 1px solid black;
             width: 50%;
             float: left;
-            padding: 50% 0% 50%;
+            padding: 50px 0% 50px;
         }
         .two{
             background-color: darksalmon ;
             border: 1px solid black;
             width: 50%;
-            padding: 50% 0% 50%;
+            padding: 50px 0% 50px;
             margin-left: auto;
         }
     </style>
