--- a/cell02/ex01/menu.html
+++ b/cell02/ex01/menu.html
@@ -5,12 +5,11 @@
 </head>
 <body>
     <div class="dropdown">
-        <button class="dropbtn">Dropdown</button>
+        <button class="dropbtn">Menu</button>
         <div class="dropdown-content">
-          <a href="#">Link 1</a>
+          <a href="#"> SNCF ham and cheese sandwich</a>
           <a href="#">Link 2</a>
           <a href="#">Link 3</a>
-          <p>1</p>
         </div>
     </div>
 </body>
