--- a/cell02/ex01/menu.html
+++ b/cell02/ex01/menu.html
@@ -7,9 +7,9 @@
     <div class="dropdown">
         <button class="dropbtn">Menu</button>
         <div class="dropdown-content">
-          <a href="#"> SNCF ham and cheese sandwich</a>
-          <a href="#">Link 2</a>
-          <a href="#">Link 3</a>
+          <p>ham and cheese sandwich</p>
+          <p>Burger King</p>
+          <p>Subway</p>
         </div>
     </div>
 </body>
