--- a/cell02/ex01/menu.html
+++ b/cell02/ex01/menu.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="menu.css" />
 </head>
 <body>
+    <h1>Dropdown Menu</h1>
     <div class="dropdown">
         <button class="dropbtn">Menu</button>
         <div class="dropdown-content">
